Team page modified, Events page UI fixed a bit for Mobiles, Navbar collapsing done when clicking on a link

--- a/src/pages/eventspage/Detail.css
+++ b/src/pages/eventspage/Detail.css
@@ -51,3 +51,8 @@
   flex-direction: column;
   margin-left: 10px;
 }
+@media only screen and (max-width: 750px) {
+  .details {
+    display: none;
+  }
+}
